[metadata]
name = Pegasus
version: attr: pegasus.__version__
url = ''
author = Felipe David Amador
author_email = felipedavidamador@gmail.com
description = A asynchronous Python ORM.
long_description = file:README.rst
license = BSD-3-Clause
classifiers =
    Development Status :: 1 -
    Framework :: Pegasus
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.6
packages = find:
scripts = pegasus/cli/pegasus_cli.py
include_package_data = true
zip_safe = true
install_requires =
	click==7.1.2
	colorama==0.4.4
	prompt-toolkit==1.0.14
	pyfiglet==0.8.post1
	Pygments==2.7.2
	PyInquirer==1.0.3
	six==1.15.0
	termcolor==1.1.0

[options.entry_points]
console_scripts =
	pgs = pegasus.cli.pegasus_cli:main
